--- a/README.Rmd
+++ b/README.Rmd
@@ -22,7 +22,7 @@ output: github_document
 台灣去年也盛行一時，因而產生一些問題，像是有些虛擬怪物會出現在特別的地方(例如：海邊、山區等等偏僻處)，使玩家會讓自己深入危險處，也有一些玩家會一邊開(騎)車一邊抓寶，以上問題皆可能造成自身安全受害。
 
 ## 分析動機
-由於現今科技發達遊戲種類越來越多種，互動性也越來越高，為了讓遊戲玩家明白除了抓寶成就之餘，也要注意自身安全以及其他用路人安全，故我們針對寶可夢地圖與交通違規紀錄做分析，求得兩者之間的相關性。
+自始Pokemon Go盛行，政府一再呼籲民眾玩樂之餘也要注意交通安全，卻仍在新聞媒體層出不窮出現因為玩寶可夢而致使交通打結的景況，欲藉由此期末專題了解交通是否因為寶可夢的盛行而有所影響。
 
 ## 使用資料
 說明使用資料們
