--- a/README.Rmd
+++ b/README.Rmd
@@ -3,48 +3,48 @@ title: "台灣Pokémon GO地圖&汽機車違規紀錄相關性"
 output: github_document
 ---
 
-
-## 作業說明 （繳交時請直接刪除這個章節）
-
-作業目的：期末專題暖身
-
-依下列指示，完成期末分析專題作業規劃：
-
-- 訂出分析問題，並將R Markdown的一級標題(第一行的title:)中的"長庚大學 大數據分析方法 作業六"取代為期末專題的分析問題，並在分析議題背景前加上組員姓名 (`10pt`)
-- 分析議題背景 (`10pt`) 與動機 (`10pt`)
-- 資料說明 (`10pt`) 與 載入 (`10pt`)
-- 資料處理與清洗 (`10pt`) 說明 (`10pt`)
-- 對資料們進行探索式資料分析，圖文並茂佳!(`20pt`)
-- 期末專題分析規劃與假設 (`10pt`)
-
 ## 李士閎、林宇辰分析議題背景
 寶可夢GO是一款基於位置服務的擴增實境類手機遊戲，由任天堂公司、精靈寶可夢公司授權，Niantic, Inc.負責開發和營運。於2016年7月起在iOS和Android平台上發布。該遊戲允許玩家以現實世界為平台，捕捉、戰鬥、訓練和交易虛擬怪獸「寶可夢」。
 台灣去年也盛行一時，因而產生一些問題，像是有些虛擬怪物會出現在特別的地方(例如：海邊、山區等等偏僻處)，使玩家會讓自己深入危險處，也有一些玩家會一邊開(騎)車一邊抓寶，以上問題皆可能造成自身安全受害。
 
 ## 分析動機
-自始Pokemon Go盛行，政府一再呼籲民眾玩樂之餘也要注意交通安全，卻仍在新聞媒體層出不窮出現因為玩寶可夢而致使交通打結的景況，欲藉由此期末專題了解交通是否因為寶可夢的盛行而有所影響。
+自始Pokemon Go盛行，政府一再呼籲民眾玩樂之餘也要注意交通安全，卻仍在新聞媒體層出不窮出現因為玩寶可夢而致使交通打結的景況，欲藉由此期末專題了解交通是否因為寶可夢的盛行而有所影響，受傷人數多的區域是否皆為相同的寶可夢。
 
 ## 使用資料
-說明使用資料們
+A2_record是事故類別：A2類的交通資料紀錄，A2的意思是交通事故當事人一人以上受傷(不管事輕傷或重傷)或超過24小時後死亡。
+pokemon是全台各縣市寶可夢巢穴名稱及地點。
 
-載入使用資料們
 ```{r}
-#這是R Code Chunk
+library(readxl)
+A2_record2 <- read_excel("C:/Users/user/Desktop/A2 record2.xlsx", 
+    skip = 2)
+View(A2_record2)
+
+library(readxl)
+pokemon2 <- read_excel("C:/Users/user/Desktop/pokemon2.xlsx")
+View(pokemon2)
 ```
 
 ## 資料處理與清洗
-說明處理資料的步驟
+我們將上面兩個匯進來的資料A2_record2和pokemon2用inner_join依照「發生地點=巢穴地址」合併在一塊兒，接著由於發生地點的最低層級包含了鄉、鎮、市、區等，我們只針對"區"進行分析，因此搜尋字串grepl有「區」的發生地點。
 
-處理資料
 ```{r}
-#這是R Code Chunk
+library(dplyr)
+A2popkemon2_join <- inner_join(A2_record2,pokemon2,by=c("發生地點"="巢穴地址"))
+A2popkemon2_join2 <- A2popkemon2_join[grepl("區",A2popkemon2_join$發生地點),]
 ```
 
 ## 探索式資料分析
-圖文並茂圖文並茂
+我們將上面得出來的A2popkemon2_join2用發生地點分組，並算出各發生地點的「死亡人數」和「受傷人數」，依照多寡順序以大排至小做遞減，最後以圖表呈現最多人數的前十名。
+
 ```{r}
-#這是R Code Chunk
+library(dplyr)
+SumofHurt <- group_by(A2popkemon2_join2, place=`發生地點`)%>%
+    summarise(ndeath=sum(`死亡人數`),
+              ninjuries=sum(`受傷人數`))%>%
+      arrange(desc(ninjuries))
+head(SumofHurt,10)
 ```
 
 ## 期末專題分析規劃
-期末專題要做XXOOO交叉分析
+期末專題要做寶可夢地圖及交通違規事故交叉分析，了解發生地點之寶可夢散步情形。
